# handprint

./: .gitignore  METHODOLOGY.md  README.md  openapi.yaml
api/: .dockerignore  Dockerfile  pyproject.toml
api/app/: __init__.py  main.py
api/app/clients/: __init__.py  air_quality.py  distance_matrix.py  places.py  vertex.py
api/app/core/: config.py  dependencies.py  logging.py  sanitizer.py
api/app/domain/: __init__.py  energy.py  estimator.py  factors.py  food.py  models.py  simulation.py  transport.py
api/app/middleware/: auth.py  body_size.py  csrf.py  rate_limit.py  sanitizer.py  security_headers.py
api/app/repositories/: __init__.py  committed_action.py  energy_log.py  food_log.py  streak.py  trip_log.py
api/app/routes/: committed_actions.py  energy.py  food.py  health.py  insights.py  simulation.py  streaks.py  trips.py
api/app/services/: __init__.py  streak_service.py
api/eval/: results.md  run_eval.py
api/eval/data/: calculator_golden_cases.json  extraction_eval_cases.json
api/tests/: __init__.py  conftest.py  test_auth.py  test_body_size.py  test_calculator_golden.py  test_csrf.py  test_dependencies.py  test_distance_matrix.py  test_energy.py  test_energy_route.py  test_factors.py  test_food.py  test_food_route.py  test_health.py  test_insights.py  test_lifespan.py  test_logging.py  test_rate_limit.py  test_repositories.py  test_repositories_emulator.py  test_sanitizer.py  test_security_headers.py  test_simulation.py  test_streak_service.py  test_streaks.py  test_transport.py  test_trips.py  test_trips_parse.py  test_vertex.py
(+22 files in other folders)
