[project]
name = "handprint-api"
version = "0.1.0"
description = "Carbon footprint awareness platform API"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115,<1",
    "uvicorn[standard]>=0.32,<1",
    "pydantic>=2.10,<3",
    "pydantic-settings>=2.7,<3",
    "structlog>=24.4,<26",
    "google-cloud-firestore>=2.19,<3",
    "firebase-admin>=6.6,<7",
    "google-cloud-aiplatform>=1.74,<2",
    "googlemaps>=4.10,<5",
    "httpx>=0.28,<1",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.8,<1",
    "mypy>=1.13,<2",
    "pytest>=8.3,<9",
    "pytest-cov>=6.0,<7",
    "pytest-asyncio>=0.24,<1",
    "httpx>=0.28,<1",
]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "A", "SIM", "TCH"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "--cov=app --cov-report=term-missing --cov-fail-under=85"

[tool.coverage.run]
source = ["app"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "if __name__",
]
